# wharton-datasci-2026

./: Phase_1b.py  Power Ranking_2.csv  README.md  Win Probabilities (Logistic Regression).csv  Win Probabilities (XG Boost).csv  cleaned_games.csv  eda.ipynb  main.py  phase1c.ipynb  phase_1a.md  phase_1b.md  phase_1b_new.py  phase_1b_new2.py  phase_1b_new_ultimate.py  phase_1c.md  power_ranking.R  power_ranking.csv  pyproject.toml  top10_line_disparity.csv  total_line_disparity.csv  total_line_disparity_new.csv  unclean_dataset.xlsx  unclean_whl.xlsx  whl_line_disparity_new.csv  win_probs.csv
.ipynb_checkpoints/: Phase_1b-checkpoint.py  eda-checkpoint.ipynb  league_table-checkpoint.csv  phase1c-checkpoint.ipynb  power_ranking-checkpoint.R  total_line_disparity-checkpoint.csv
